--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AI Joke Generator 😄</title>
+    <link rel="stylesheet" href ="src/style.css">
 </head>
 <body>
     <h1>Welcome to the joke generator</h1>
+    <script src = "src/index.js"></script>
+    <footer>This project was coded by Roxane Beharry and is <a href="https://github.com/rbeharry/joke-generator" target="_blank">open-sourced on Github</a></footer>
 </body>
 </html>
