--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Welcome to the joke generator</h1>
     <script src = "src/index.js"></script>
-    <footer>This project was coded by Roxane Beharry and is <a href="https://github.com/rbeharry/joke-generator" target="_blank">open-sourced on Github</a></footer>
+    <footer>This project was coded by Roxane Beharry and is <a href="https://github.com/rbeharry/joke-generator" target="_blank">open-sourced on Github</a>and is hosted on Netlify</footer>
 </body>
 </html>
