Added the basic html structure

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>AI Joke Generator 😄</title>
     <link rel="stylesheet" href ="src/style.css">
 </head>
+    <h1>AI Joke Generator</h1>
 <body>
-    <h1>Welcome to the joke generator</h1>
+    <main>
+        <form>
+            <input type="text" placeholder="Enter the topic of the joke" autofocus required/>
+        <input type="Submit" />
+        </form>
+        <div>Why shouldn’t you fight a group of monkeys?<br>
+Because they use gorilla warfare.</div>
+</main>
+
     <script src = "src/index.js"></script>
     <footer>This project was coded by Roxane Beharry and is <a href="https://github.com/rbeharry/joke-generator" target="_blank">open-sourced on Github</a>and is hosted on <a href="https://www.netlify.com/"target="_blank">Netlify</a></footer>
 </body>
