--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Joke Generator 😄</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href ="src/style.css">
 </head>
     <h1>AI Joke Generator</h1>
 <body>
+    <div class="container">
     <main>
         <form>
-            <input type="text" placeholder="Enter the topic of the joke" autofocus required/>
-        <input type="Submit" />
+            <input type="text" placeholder="Enter the topic of the joke" autofocus required class="prompt"/>
+        <input type="Submit" class="submit-button"/>
         </form>
-        <div>Why shouldn’t you fight a group of monkeys?<br>
+        <div class="joke">Why shouldn’t you fight a group of monkeys?<br>
 Because they use gorilla warfare.</div>
 </main>
 
     <script src = "src/index.js"></script>
-    <footer>This project was coded by Roxane Beharry and is <a href="https://github.com/rbeharry/joke-generator" target="_blank">open-sourced on Github</a>and is hosted on <a href="https://www.netlify.com/"target="_blank">Netlify</a></footer>
+    <footer>This project was coded by Roxane Beharry and is <a href="https://github.com/rbeharry/joke-generator" target="_blank">open-sourced on Github </a>and is hosted on <a href="https://www.netlify.com/"target="_blank">Netlify</a></footer>
+</div>
 </body>
 </html>
