--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Joke Generator 😄</title>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>  
+
    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href ="src/style.css">
 </head>
     <h1>AI Joke Generator</h1>
 <body>
+     <div id="typewriter">
     <div class="container">
     <main>
-        <form>
+        <form id="joke-generator-form">
             <input type="text" placeholder="Enter the topic of the joke" autofocus required class="prompt"/>
-        <input type="Submit" class="submit-button"/>
+        <input type="submit" class="submit-button"/>
         </form>
-        <div class="joke">Why shouldn’t you fight a group of monkeys?<br>
-Because they use gorilla warfare.</div>
+        <div class="joke" id="typewriter">
+            </div>
+</div>
 </main>
 
     <script src = "src/index.js"></script>
